# elspais

./: .elspais.toml  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlintignore  .mcp.json  AGENT-ONBOARDING.md  AGENT_DESIGN_PRINCIPLES.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CONFIG-SCHEMA_TASK_1.md  CONFIG-SCHEMA_TASK_12.md  CONFIG-SCHEMA_TASK_13.md  CONFIG-SCHEMA_TASK_14.md  CONFIG-SCHEMA_TASK_15.md  CONFIG-SCHEMA_TASK_16.md  CONFIG-SCHEMA_TASK_17.md  CONFIG-SCHEMA_TASK_18.md  CONFIG-SCHEMA_TASK_19.md  CONFIG-SCHEMA_TASK_2.md  CONFIG-SCHEMA_TASK_20.md  CONFIG-SCHEMA_TASK_21.md  CONFIG-SCHEMA_TASK_22.md  CONFIG-SCHEMA_TASK_23.md  CONFIG-SCHEMA_TASK_24.md  CONFIG-SCHEMA_TASK_3.md  CONFIG-SCHEMA_TASK_4.md  CONFIG-SCHEMA_TASK_5.md  CONFIG-SCHEMA_TASK_6.md  CONFIG-SCHEMA_TASK_7.md  CONFIG-SCHEMA_TASK_8.md  CONFIG-V3_TASK_1.md  CONFIG-V3_TASK_2.md  CONFIG-V3_TASK_8.md  CONFIG_DESIGN.md  DEFINED_TERMS_TASK_10.md  DEFINED_TERMS_TASK_11.md  DEFINED_TERMS_TASK_12.md  DEFINED_TERMS_TASK_13.md  (+94 more)
.claude/: code-review-findings.md  future-mcp-graph-integration.md  graph-reference.md  ralph-loop.local.md  settings.json
.claude/hooks/: validate-pr-title.sh
.claude/plans/: assertion-refs-audit.md
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: slack-channels.yml
.github/docker/: Dockerfile
.github/workflows/: auto-release.yml  auto-version.yml  build-ci-image.yml  ci.yml  docs-verify.yml  pr-validation.yml  publish-pypi.yml  test-slack-notification.yml  test-slack.yml
.superpowers/sdd/: task-2-report.md
docs/: GAPS-requirement-verification.md  NEW_SPECS.md  commands.md  configuration.md  design_comments.md  design_decisions.md  design_traceability_classification.md  executive_summary_auditors.md  executive_summary_developers.md  executive_summary_sponsors.md  known-issues.md  mcp.md  multi-repo.md  overview.md  patterns.md  phase5-dogfooding-report.md  review_design_decisions.md  review_executive_summary_auditors.md  review_executive_summary_developers.md  review_executive_summary_sponsors.md  rules.md  trace-view.md  traceability-report.md  traceability-tree.md
docs/cli/: analysis.md  assertions.md  associate.md  checks.md  commands.md  config.md  doctor.md  format.md  git.md  graph-model.md  health.md  hierarchy.md  ignore.md  linking.md  mcp.md  quickstart.md  satisfies.md  terms.md  test-results.md  trace.md  traceability.md  validation.md
docs/design/: 2026-06-30-addressable-unit-abstraction-evaluation.md  2026-07-01-cur-1557-target-selectivity-design.md  2026-07-01-cur-1557-target-selectivity-plan.md  2026-07-02-coverage-metrics-redesign-design.md  2026-07-02-coverage-metrics-redesign-plan.md  2026-07-07-indirect-coverage-redesign-design.md  2026-07-07-indirect-coverage-redesign-plan.md  2026-07-07-relative-coverage-metrics-design.md  2026-07-07-relative-coverage-metrics-plan.md  2026-07-08-journey-step-result-matching-design.md
docs/plans/: 2026-02-17-e2e-integration-tests-design.md  2026-02-17-e2e-integration-tests-plan.md  2026-02-17-overview-pdf-design.md  2026-02-17-overview-pdf-plan.md  2026-02-26-exit-codes-design.md  2026-02-26-exit-codes-plan.md  2026-03-05-multi-assertion-expansion-design.md  2026-03-05-multi-assertion-expansion.md  2026-03-06-group-test-refs-by-assertion-design.md  2026-03-06-group-test-refs-by-assertion.md  2026-03-06-unified-report-system-design.md  2026-03-08-viewer-edit-improvements-design.md  2026-03-09-viewer-git-sync-design.md  2026-03-09-viewer-git-sync.md
docs/roadmap/: executive_summary_developers.md  executive_summary_sponsors.md  report-schema.md  review_design_decisions.md  review_executive_summary_auditors.md  review_executive_summary_developers.md  review_executive_summary_sponsors.md  v1.0.0-goal.md
docs/spec/: config-schema.md  graph-rename.md  report-schema.md
spec/: 07-graph-architecture.md  08-mcp-server.md  AI-AGENT.md  INDEX.md  arch.md  dev-cli-analysis.md  dev-cli-coverage.md  dev-cli-report.md  dev-cli-trace.md  dev-cli-validate.md  dev-cli.md  dev-exit-codes.md  dev-graph-config.md  dev-graph-core.md  dev-graph-federation.md  dev-graph-file-nodes.md  dev-mcp-tools.md  dev-multi-assertion.md  dev-reference-config.md  dev-traceview-review.md  glossary.md  ops-architecture.md  ops-cicd.md  ops-mcp.md  prd-core.md  prd-cross-cutting.md  prd-elspais.md  prd-features.md  prd-pdf-generation.md  requirements-spec.md  requirements.md  test.md
spec/_generated/: glossary.md  term-index.md
spec/journeys/: dev-team.md  executive.md  project-management.md  quality-assurance.md  sponsor-oversight.md
spec/roadmap/: review-system.md
src/elspais/: __init__.py  __main__.py  associates.py  cli.py  content_rules.py  loader.py  models.py  parser.py  rules.py  view_model.py
tests/: conftest.py  test_annotators.py  test_associates_canonical.py  test_changelog_author.py  test_ci_workflows.py  test_cli_checks_args.py  test_cli_integration.py  test_cli_string_validity.py  test_cli_terms.py  test_color_resolve.py  test_config.py  test_config_canonical_root.py  test_config_cli_overrides.py  test_config_env_overrides.py  test_config_migration.py  test_config_schema_colors.py  test_config_schema_runners.py  test_definition_grammar.py  test_doc_sync.py  test_duplicate_req_ids.py  test_dynamic_template_rendering.py  test_edge_sets.py  test_edit.py  test_edit_status_author.py  test_embedded_data.py  test_end_marker.py  test_example_cmd.py  test_fixture_health.py  test_git.py  test_glossary_cmd.py  test_graph.py  test_graph_builder.py  test_graph_schema.py  test_hasher.py  test_health.py  test_health_command.py  test_health_coverage.py  test_health_results_stale.py  test_hierarchy.py  test_init.py  (+28 more)
tests/_obsolete/: test_graph_builder.py  test_graph_schema.py  test_hash_bugs.py  test_index.py  test_parsers_journey.py  test_parsers_junit_xml.py  test_report_schema.py  test_sponsors.py  test_validate_json.py
tests/arch3/: test_builder.py  test_config.py  test_graph_node.py  test_patterns.py  test_serialize.py
tests/commands/: __init__.py  test_assertion_spacing.py  test_associate_cli_integration.py  (+58 more)
(+706 files in other folders)
