[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "elspais"
version = "0.119.9"
description = "Requirements validation and traceability tools - L-Space connects all libraries"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anspar", email = "dev@anspar.io" }]
keywords = ["requirements", "traceability", "validation", "documentation", "specifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
# Minimal dependencies: tomlkit for TOML parsing/round-trip, pydantic for config schema validation, tyro for CLI generation
dependencies = ["tomlkit>=0.12", "pydantic>=2.0", "tyro>=0.9", "lark>=1.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black==25.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pyyaml>=6.0",
]
binary = ["pyinstaller>=6.0"]
mcp = ["mcp>=1.0"]
# REQ-p00080-A: PDF compilation (no Python deps - uses external pandoc + xelatex)
pdf = []
# REQ-int-d00002-B: HTML generation requires jinja2
trace-view = ["jinja2>=3.0", "pygments>=2.0"]
# REQ-int-d00002-C: Review server requires starlette
trace-review = [
    "jinja2>=3.0",
    "pygments>=2.0",
    "starlette>=0.36",
    "uvicorn>=0.20",
]
# All optional features
all = [
    "jinja2>=3.0",
    "pygments>=2.0",
    "starlette>=0.36",
    "uvicorn>=0.20",
    "mcp>=1.0",
]

[project.scripts]
elspais = "elspais.cli:main"

[project.urls]
Homepage = "https://github.com/anspar/elspais"
Documentation = "https://github.com/anspar/elspais#readme"
Repository = "https://github.com/anspar/elspais"
Issues = "https://github.com/anspar/elspais/issues"
Changelog = "https://github.com/anspar/elspais/blob/main/CHANGELOG.md"

[tool.flit.sdist]
include = ["tests/", "docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short --ignore=tests/_obsolete --ignore=tests/fixtures -m 'not e2e and not browser'"
markers = [
    "e2e: end-to-end tests requiring external tools or subprocess invocation (deselected by default, run with: pytest -m e2e)",
    "browser: browser-based tests requiring Playwright (deselected by default, run with: pytest -m browser)",
]

[tool.coverage.json]
# CUR-1568: enables code_tested.direct (per-test line attribution).
# .githooks/pre-commit already runs pytest with `--cov-context=test`
# (pytest-cov's own dynamic context, keyed by pytest nodeid + "|run"/"|setup"/
# "|teardown" -- the format elspais's normalizer expects). That alone is not
# enough: the JSON reporter omits the per-line `contexts` map unless asked.
#
# Deliberately NOT setting `[tool.coverage.run] dynamic_context` here: it is
# coverage.py's OWN context-switching (keyed by dotted test qualname, no file
# path, no "|run" suffix) and it wins over pytest-cov's manual
# switch_context() calls when both are configured -- verified empirically:
# adding it silently replaced pytest-cov's nodeid-shaped contexts with the
# incompatible dotted form, and code_tested.direct stayed 0 for the whole
# repo. Since `--cov-context=test` is the only coverage-generation path here
# (.githooks/pre-commit), only `show_contexts` is needed.
show_contexts = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
