[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "elspais"
version = "0.119.84"
description = "Requirements validation and traceability tools - L-Space connects all libraries"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anspar", email = "dev@anspar.io" }]
keywords = ["requirements", "traceability", "validation", "documentation", "specifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
# Minimal dependencies: tomlkit for TOML parsing/round-trip, pydantic for config schema validation, tyro for CLI generation
dependencies = ["tomlkit>=0.12", "pydantic>=2.0", "tyro>=0.9", "lark>=1.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black==25.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pyyaml>=6.0",
]
binary = ["pyinstaller>=6.0"]
mcp = ["mcp>=1.0"]
# REQ-p00080-A: PDF compilation (no Python deps - uses external pandoc + xelatex)
pdf = []
# REQ-int-d00002-B: HTML generation requires jinja2
trace-view = ["jinja2>=3.0", "pygments>=2.0"]
# REQ-int-d00002-C: Review server requires starlette
trace-review = [
    "jinja2>=3.0",
    "pygments>=2.0",
    "starlette>=0.36",
    "uvicorn>=0.20",
]
# CUR-1568: per-test line attribution (code_tested.direct) from coverage.py's
# native `.coverage` SQLite data file, via coverage.py's public API.
coverage = ["coverage>=7.0"]
# All optional features
all = [
    "jinja2>=3.0",
    "pygments>=2.0",
    "starlette>=0.36",
    "uvicorn>=0.20",
    "mcp>=1.0",
    "coverage>=7.0",
]

[project.scripts]
elspais = "elspais.cli:main"

[project.urls]
Homepage = "https://github.com/anspar/elspais"
Documentation = "https://github.com/anspar/elspais#readme"
Repository = "https://github.com/anspar/elspais"
Issues = "https://github.com/anspar/elspais/issues"
Changelog = "https://github.com/anspar/elspais/blob/main/CHANGELOG.md"

[tool.flit.sdist]
include = ["tests/", "docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short --ignore=tests/_obsolete --ignore=tests/fixtures -m 'not e2e and not browser'"
markers = [
    "e2e: end-to-end tests requiring external tools or subprocess invocation (deselected by default, run with: pytest -m e2e)",
    "browser: browser-based tests requiring Playwright (deselected by default, run with: pytest -m browser)",
]

[tool.coverage.json]
# CUR-1568: per-test line attribution (code_tested.direct) is fed by
# `--cov-context=test` in .githooks/pre-commit (pytest-cov's dynamic context,
# keyed by pytest nodeid + "|run"/"|setup"/"|teardown" -- the format elspais's
# normalizer expects). Contexts live compactly in the .coverage SQLite DB
# (~5 MB for this repo).
#
# Deliberately NOT setting `[tool.coverage.run] dynamic_context`: it is
# coverage.py's OWN context-switching (dotted test qualname, no file path, no
# "|run" suffix) and it wins over pytest-cov's switch_context() when both are
# configured -- verified empirically: it silently replaced the nodeid-shaped
# contexts and code_tested.direct stayed 0 repo-wide.
#
# Deliberately NOT setting `show_contexts = true`: the JSON reporter expands
# the per-line context map to a ~9.4 GB coverage.json for this repo, and every
# graph build that ingested it peaked at ~22 GB RSS (system-OOM territory).
# Per-test attribution is instead read directly from the .coverage SQLite DB
# via coverage.py's public API (CoverageSqliteParser, elspais[coverage]
# extra) -- elspais's own `[[scanning.test.targets]]` (.elspais.toml) points
# `coverage` at `.coverage` and Code Tested is populated again, without the
# JSON-report size blowup described above.

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
